2007-05-27 Igor Zelmanovich <igorz@mainsoft.com>

	* ObjectDataSourceView.cs: fixed SelectMethod and SelectCountMethod properties:
	when changed, DataSourceViewChanged event is raised.
	
	* SqlDataSourceView: fixed SelectCommand property:
	when changed, DataSourceViewChanged event is raised.

2007-05-25  Marek Habersack  <mhabersack@novell.com>

	* ObjectDataSourceView.cs: CreateDataObject must pay attention to
	TypeConverter attributes on the property being converted.

2007-05-24 Igor Zelmanovich <igorz@mainsoft.com>

	* Menu.cs: fixed: alt attribute is rendered as well.

2007-05-16  Marek Habersack  <mhabersack@novell.com>

	* CompareValidator.cs: formatting changes

2007-05-15  Marek Habersack  <mhabersack@novell.com>

	* ObjectDataSourceView.cs: refactoring - use
	HttpApplication.LoadType to look up types.

2007-05-10  Marek Habersack  <mhabersack@novell.com>

	* Table.cs: render rows, not controls

	* HyperLink.cs: RenderContents must check if the render method
	delegate is present and, if yes, call the base RenderContents.

	* LinkButton.cs: as above.

	* Label.cs: as above.

	* TableCell.cs: as above.
	This change makes the HeaderTemplate in the Wizard control work.
	
	* Wizard.cs: if a next/previous step handler modifies
	ActiveStepIndex do not, respectively, increase/decrease the
	current step, but use whatever was set in the handler.

2007-05-09  Marek Habersack  <mhabersack@novell.com>

	* TreeNodeStyleCollection.cs: do not set font's underline flag to
	false, set it to its own value instead.

	* TreeView.cs: if level style exists and has ChildNodesPadding
	set, it takes precedence over the node style setting (if any).

2007-05-08  Marek Habersack  <mhabersack@novell.com>

	* TreeView.cs: children padding is rendered only before and after
	the children are rendered, not between them. Also, render padding
	only if there are any nodes to follow the current one.

2007-05-07  Marek Habersack  <mhabersack@novell.com>
