@@ -1,3 +1,12 @@
+2007-05-29 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* ObjectDataSourceView.cs:
+	* SiteMapDataSource.cs:
+	* SqlDataSource.cs:
+	* SqlDataSourceView.cs:
+	DataSourceChanged and DataSourceViewChanged are raised in right case, when
+	different properties changed their value.				
+
 2007-05-27 Igor Zelmanovich <igorz@mainsoft.com>
 
 	* ObjectDataSourceView.cs: fixed SelectMethod and SelectCountMethod properties:
